# rust-osdev

./: Cargo.toml  Dockerfile  Makefile  README.md
.cargo/: config.toml
buildenv/: Dockerfile
src/: framebuffer.rs  interrupts.rs  lib.rs  logger.rs  panic.rs  serial.rs  tests.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  grub.cfg  linker.ld  long_mode_init.asm  multiboot_header.asm
src/framebuffer/: builder.rs  color.rs  mod.rs  renderer.rs  writer.rs
src/heap/: bump_allocator.rs  linked_list_allocator.rs  mod.rs  utils.rs
src/interrupts/: idt.rs  mod.rs  pic.rs
src/memory/: area_frame_allocator.rs  frame.rs  mod.rs  tiny_frame_allocator.rs
src/memory/frame/: mod.rs  tiny_frame_allocator.rs
src/memory/heap/: bump_allocator.rs  linked_list_allocator.rs  mod.rs  utils.rs
src/memory/paging/: active_page_table.rs  entry.rs  inactive_page_table.rs  mapper.rs  mod.rs  page.rs  table.rs
src/paging/: active_page_table.rs  entry.rs  mapper.rs  mod.rs  page.rs  table.rs
