[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
bit_field = "0.10.2"
bitflags = "2.6.0"
lazy_static = {version = "1.5.0", features = ["spin_no_std"]}
linkme = "0.3.27"
multiboot2 = { version = "0.20.2", default-features = false }
spin = "0.9.8"
uart_16550 = "0.3.1"
volatile = "0.2"
x86_64 = "0.15.1"

[lib]
crate-type = ["staticlib"]


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(testing)'] }
